
-----------------------------
lambkit-1.0.2:
新增：新增undertow-websocket支持，默认加入DefaultWebSocketServer，地址/websocket
新增：SecurityUtils新增AES加密解密
新增：数据库密码加密
新增：新增ApiRoute路由，可直接发布service中的方法
新增：新增Dubbo实现的RPC功能
新增：集成zookeeper和consul服务注册和发现功能
新增：ApiRoute新增拦截器ApiInterceptor、验证器ApiValidator
新增：ApiRoute新增ApiRender渲染器，可自定义输出方式
新增：新增ApiRoute测试代码
优化：增强LambkitCache能力，增加list、set方式的缓存
优化：更改Upms缓存方式，可选择LambkitCache和Redis两种方式
优化：优化CommonUtils工具
优化：移除module中的Lms、Upms，精简lambkit
优化：移除shiro.ini中关于upms的配置
优化：升级JFinal到4.7
优化：ehcache升级到2.6.11
优化：优化网关服务GatewayService
优化：ApiRoute统一返回接口格式
优化：ApiValidator验证器通过key直接验证params参数，通过index验证method参数值
优化：mgrdb支持PostgreSQL大写字段
修复：修复generator模板地址错误问题
修复：修复LambkitApplication.run使用错误问题
修复：去除com.beust.jcommander.internal包的引用
修复：修复ApiRoute调用时ApiStore未装载完成的错误
修复：修复ApiRoute运行method方法
修复：修复ApiRenderJson输出null值

-----------------------------
lambkit-1.0.1：

优化：调整部分关键类的命名，增加Lambkit前缀
优化：LambkitService增加方法
优化：JFinal模板基类完善
优化：ResultJson更改为AjaxResult
优化：Application由使用类更改为系统基类，将Lambkit必须配置的部分放到这里，减轻DefaultModule的体量
优化：webconfig配置与内容优化
优化：优化lambkitService中QueryPara
优化：优化lambkitModel中SqlPara查询
新增：WebConfigManager管理webconfig
修复：默认LambkitControllerContext加入到运行时中

-----------------------------
lambkit-0.3.1：

优化：优化MSCH模型模板
优化：优化jwt的缓存配置
优化：优化jwt拦截器返回值
优化：优化upms的接口地址
优化：更改addin配置名称为enable
优化：优化Ehcache的path自定义功能
优化：优化Lms启用配置，增加地址配置功能
优化：优化GetawayRender支持当前系统其他地址的代理
修复：修复mgrdb、meta和upms配置交叉问题
修复：修复代码生成器sysconfig、meta同时运行的冲突问题
修复：修复redirect错误

-----------------------------
lambkit-0.2.3：

新增：增加Msch工具类，简化生成器代码
新增：增加支持ActiveMQ消息功能
新增：增加支持Redis集群
新增：增加支持Kafka消息功能
新增：增加支持HBase功能
新增：增加支持Hadoop-hdfs文件管理功能
优化：优化jwt参数配置方式
优化：优化启动入口,改由LambkitApplication启动，启动配置改由Application
优化：优化SystemInfo为LambkitInfo是框架内部运行信息,位置移动到com.lambkit.common
优化：优化将数据库和表格信息的采集和存储方式（DbWrapper、TableWrapper）
优化：优化内部api管理功能，后续还待完善
删除：删除DevelopModule，改用LmsModule
删除：删除部分未实现的类
删除：删除com.lambkit.system包，更改为com.lambkit.common.monitor监控
删除：删除com.lambkit.core.http.api，更改为com.lambkit.core.api外部Api接口管理
