@@ -10,6 +10,7 @@ lambkit-1.0.2:
 新增：ApiRoute新增拦截器ApiInterceptor、验证器ApiValidator
 新增：ApiRoute新增ApiRender渲染器，可自定义输出方式
 新增：新增ApiRoute测试代码
+新增：ApiRoute增加ApiMapping重名错误抛出
 优化：增强LambkitCache能力，增加list、set方式的缓存
 优化：更改Upms缓存方式，可选择LambkitCache和Redis两种方式
 优化：优化CommonUtils工具
